Fix content jump when data becomes fresh

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -86,3 +86,6 @@ a.github:hover svg {
     color: #6e8992;
     font-weight: bold;
 }
+#freshening {
+    display: none;
+}
